--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,20 @@ wheels/
 
 # Virtual environments
 .venv
+
+# Environment variables
+.env
+.env.local
+*.env
+data/KEY/.env
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Test and temporary files
+test_*.py
+debug_*.py
+quick_test.py
